<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/application_title_background"
                android:fontFamily="@font/exo"
                android:text="New Job Details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Title"
                android:textAlignment="inherit"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/titleUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Company"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/companyUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="State"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/StateUnitID"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="City"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/CityUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Cost of Living"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/costoflivingUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Yearly Salary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/yearlysalaryUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Yearly Bonus"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/yearlybonusUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Tuition Reimbursement"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tuitionreimbursementUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Health Insurance"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/healthinsuranceUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Employee Discount"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/employeediscountUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:text="Child Adoption Assistance"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/childadoptionUnitID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/exo"
                android:gravity="bottom"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButtonUnitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/exo"
                android:text="Cancel"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButtonUnitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/exo"
                android:text="Save"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>