...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Yearly Salary" />

            <com.google.android.material.slider.Slider
                android:id="@+id/yearlySalaryWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
...
